Added HTML images and CSS styling

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
               </div>
           </div>
           <div class="row">
-            <div class="col-md-4">
-              One of three columns
+            <div class="col-md-8">
+                <span><img class="jewelImages" src="assets/images/bluegem.jpeg"></span>
+                <span><img class="jewelImages" src="assets/images/greengem.jpg"></span>
+                <span><img class="jewelImages" src="assets/images/purplegem.jpeg"></span>
+                <span><img class="jewelImages" src="assets/images/saphire.jpeg"></span>
             </div>
           </div>
           <div class="row">
