Added psuedo code

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           </div>
           <div class="row">
             <div class="col-md-8">
-                <span><img class="jewelImages" src="assets/images/bluegem.jpeg"></span>
-                <span><img class="jewelImages" src="assets/images/greengem.jpg"></span>
-                <span><img class="jewelImages" src="assets/images/purplegem.jpeg"></span>
-                <span><img class="jewelImages" src="assets/images/saphire.jpeg"></span>
+                <span><img class="jewelImages" id="jewel1" src="assets/images/bluegem.jpeg"></span>
+                <span><img class="jewelImages" id="jewel2" src="assets/images/greengem.jpg"></span>
+                <span><img class="jewelImages" id="jewel3" src="assets/images/purplegem.jpeg"></span>
+                <span><img class="jewelImages" id="jewel4" src="assets/images/saphire.jpeg"></span>
             </div>
           </div>
           <div class="row">
