Adjusted JS and HTML files

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3" id="thirdRowBox">
-              One of three columns
+            <div class="col-md-3" id="thirdRowBox" alt="randomscore">
+              
             </div>
             <div class="col-md-2" id="thirdRowBox2">
-                One of three columns
+                <div id="wins"></div>
+                <div id="losses"></div>
               </div>
           </div>
           <div class="row">
