Made adjustments to CSS & HTML

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- External CSS Sheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>CrystalsCollector!</title>
+    <title>Crystals Collector!</title>
   </head>
   <body>
     <div class="container">
-        <div class="row">
-          <div class="col-md-4 bg-warning">
-            <h1>CrystalsCollector!</h1>
+        <div class="row" id="headingRow">
+          <div class="col-md-10 bg-warning">
+            <span><h1>Crystals</h1></span>
+            <span><h2>Collector!</h2></span>
           </div>
         </div>
         <div class="row">
