Adjusted HTML & CSS

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <body>
     <div class="container">
         <div class="row" id="headingRow">
-          <div class="col-md-10 bg-warning">
+          <div class="col-md-12 bg-warning py-5 d-flex justify-content-center align-items-center">
             <span><h1>Crystals</h1></span>
             <span><h2>Collector!</h2></span>
           </div>
         </div>
         <div class="row">
-            <div class="col-md-10" id="secondRow">
+            <div class="col-md-12 py-5  justify-content-center align-items-center" id="secondRow">
                 <p>You will be given a random number at the start of the game.</p>
 
                 <p> There are four crystals below. By clicking on a crystal you will add a specific
@@ -36,36 +36,54 @@
                 <p> Each time when the game starts, the game will change the values of each crystal.</p>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-md-3" id="thirdRowBox" alt="randomscore">
-              
-            </div>
-            <div class="col-md-2" id="thirdRowBox2">
-                <div id="wins"></div>
-                <div id="losses"></div>
-              </div>
-          </div>
-          <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 pb-3 d-flex justify-content-around">
                 <span><img class="jewelImages" id="jewel1" src="assets/images/bluegem.jpeg"></span>
                 <span><img class="jewelImages" id="jewel2" src="assets/images/greengem.jpg"></span>
                 <span><img class="jewelImages" id="jewel3" src="assets/images/purplegem.jpeg"></span>
                 <span><img class="jewelImages" id="jewel4" src="assets/images/saphire.jpeg"></span>
             </div>
+            <div class="col-md-2"></div>
           </div>
+
           <div class="row">
-            <div class="col-md-2" id="yourTotal">
-              <p>Your total score is:</p>
+                    <div class="col-md-6 d-flex justify-content-center" id="thirdRowBox" alt="randomscore">
+                        <h5>Target Score:</h5>
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center" id="yourTotal">
+                        <h5>Your Score:</h5>
+                    </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 py-5 d-flex justify-content-center align-items-center">
+              <h3 id="randomScore"></h3>
+            </div>
+            <div class="col-md-6 py-5 d-flex justify-content-center align-items-center">
+              <!-- Player Score -->
+              <h3 id="playerScore"></h3>
             </div>
           </div>
+
           <div class="row">
-            <div class="col-md-2" id="playerScore">
-              One of three columns
+            <div class="col-md-6 pt-3 d-flex justify-content-center align-items-center">
+              <h5>Wins: <span id="wins"></span></h5>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-6 pt-3 d-flex justify-content-center align-items-center">
+              <h5>Losses: <span id="losses"></span></h5>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4 d-flex justify-content-center">
               <h2 id="status"></h2>
             </div>
+            <div class="col-md-4"></div>
           </div>
+          
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
