Added event listener to images

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <div class="row" id="headingRow">
           <div class="col-md-12 bg-warning py-5 d-flex justify-content-center align-items-center">
-            <span><h1>Crystals</h1></span>
-            <span><h2>Collector!</h2></span>
+            <span><h2>Crystals Collector!</h2></span>
+            
           </div>
         </div>
         <div class="row">
