Changed CSS sizing and styling

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           </div>
 
           <div class="row" id="dataRow">
-                    <div class="col-md-3 d-flex justify-content-center align-items-center" id="thirdRowBox" alt="randomscore">
+                    <div class="col-md-3 pt-3 d-flex justify-content-center align-items-center" id="thirdRowBox" alt="randomscore">
                         <h5>Target Score: <span id="randomScore"></span></h5>
                     </div>
-                    <div class="col-md-3 d-flex justify-content-center align-items-center" id="yourTotal">
+                    <div class="col-md-3 pt-3 d-flex justify-content-center align-items-center" id="yourTotal">
                         <h5>Your Score: <span id="playerScore"></span></h5>
                     </div>
                     <div class="col-md-3 pt-3 d-flex justify-content-center align-items-center">
